fix visible benchmark overflow

--- a/MetaBenchmark/Client/wwwroot/css/app.css
+++ b/MetaBenchmark/Client/wwwroot/css/app.css
@@ -83,6 +83,7 @@ a, .btn-link {
 
 .benchmark-entry img {
     width: 100%;
+    max-height: 40px;
 }
 
 .compare-products > .row {
